Colaboratory를 통해 생성됨

--- a/2020_08_17_한국거래소_주가정보_가져오기.ipynb
+++ b/2020_08_17_한국거래소_주가정보_가져오기.ipynb
@@ -6,7 +6,7 @@
       "name": "2020_08_17_한국거래소_주가정보_가져오기.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOS+OiZ6USFhy3gYbDo1TdI",
+      "authorship_tag": "ABX9TyNTNQhMqBy/7gAM2csX0U+H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# 실시간시세_영문 XML 사용해서 가져오기"
+        "# 한국거래소 기업/시세 공시 정보 제공 서비스\n",
+        "- 실시간시세_영문 XML 사용해서 필요한 정보 가져오기"
       ]
     },
     {
@@ -64,8 +65,8 @@
         "colab": {}
       },
       "source": [
-        "STOCK_CODE = \"005380\"\n",
-        "\n",
+        "STOCK_CODE = \"005380\" ## 관심 종목 입력\n",
+        " \n",
         "url=\"http://asp1.krx.co.kr/servlet/krx.asp.XMLSiseEng?code={}\".format(STOCK_CODE)\n",
         "result=urlopen(url).read()\n",
         "xmlsoup=BeautifulSoup(result,\"lxml-xml\")"
@@ -76,11 +77,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "RxSZehW_EKI6",
+        "colab_type": "text"
+      },
+      "source": [
+        "</br>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Uau74uiCzXG3",
         "colab_type": "text"
       },
       "source": [
-        "## 실시간 주가정보 가지고 오기"
+        "## 1. 실시간 주가정보 가지고 오기"
       ]
     },
     {
@@ -90,7 +101,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 77
+          "height": 164
         },
         "outputId": "1e285aad-eabd-45d0-a0e5-f180fb59264e"
       },
@@ -191,11 +202,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "byOhGWpNENjA",
+        "colab_type": "text"
+      },
+      "source": [
+        "</br>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Yk0NsL3AzZo0",
         "colab_type": "text"
       },
       "source": [
-        "## 일별 주가 가지고 오기"
+        "## 2. 일별 주가 가지고 오기"
       ]
     },
     {
@@ -425,11 +446,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "-g-XfAPpEPUx",
+        "colab_type": "text"
+      },
+      "source": [
+        "</br>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Q73LbTJA7M4t",
         "colab_type": "text"
       },
       "source": [
-        "## 매도/매수 상위 증권사 정보"
+        "## 3. 매도/매수 상위 증권사 정보"
       ]
     },
     {
@@ -561,17 +592,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "8YgDomya7Zd_",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jkk2stefES-g",
+        "colab_type": "text"
       },
       "source": [
-        "ask_mapping = {\"member_memdoMem\":\"매도상위 증권사\",\"member_memdoVol\":\"매도 거래량\", \"member_memsoMem\":\"매수상위 증권사\", \"member_mesuoVol\":\"매수 거래량\"}"
-      ],
-      "execution_count": 8,
-      "outputs": []
+        "</br>"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -580,7 +608,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 주요 지수 정보"
+        "## 4. 주요 지수 정보"
       ]
     },
     {
@@ -694,6 +722,16 @@
           },
           "execution_count": 9
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k5g_ISBVEVtw",
+        "colab_type": "text"
+      },
+      "source": [
+        "</br>"
       ]
     },
     {
