Colaboratory를 통해 생성됨

--- a/2020_08_17_한국거래소_주가정보_가져오기.ipynb
+++ b/2020_08_17_한국거래소_주가정보_가져오기.ipynb
@@ -6,7 +6,7 @@
       "name": "2020_08_17_한국거래소_주가정보_가져오기.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTNQhMqBy/7gAM2csX0U+H",
+      "authorship_tag": "ABX9TyP1IPgtB6rEkCISEREZfi1n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,9 @@
       },
       "source": [
         "# 한국거래소 기업/시세 공시 정보 제공 서비스\n",
-        "- 실시간시세_영문 XML 사용해서 필요한 정보 가져오기"
+        "\"실시간시세_영문\" XML 사용해서 필요한 정보 가져오기   \n",
+        "\n",
+        "관련 링크: https://kasp.krx.co.kr/contents/02/02010000/ASP02010000.jsp"
       ]
     },
     {
@@ -73,16 +75,6 @@
       ],
       "execution_count": 2,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RxSZehW_EKI6",
-        "colab_type": "text"
-      },
-      "source": [
-        "</br>"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -197,16 +189,6 @@
           },
           "execution_count": 3
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "byOhGWpNENjA",
-        "colab_type": "text"
-      },
-      "source": [
-        "</br>"
       ]
     },
     {
@@ -446,16 +428,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-g-XfAPpEPUx",
-        "colab_type": "text"
-      },
-      "source": [
-        "</br>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Q73LbTJA7M4t",
         "colab_type": "text"
       },
@@ -594,16 +566,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jkk2stefES-g",
-        "colab_type": "text"
-      },
-      "source": [
-        "</br>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Yn2f8x4Y_2Cg",
         "colab_type": "text"
       },
@@ -722,16 +684,6 @@
           },
           "execution_count": 9
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "k5g_ISBVEVtw",
-        "colab_type": "text"
-      },
-      "source": [
-        "</br>"
       ]
     },
     {
